# brkrs

./: .gitignore  .pre-commit-config.yaml  .rumdl.toml  ACTIONS_COMPLETED.md  CHANGELOG.md  Cargo.toml  DOCUMENTATION_UPDATES.md  GRAVITY_INDICATOR_STATUS.md  IMPLEMENTATION_PROGRESS_020_GRAVITY_BRICKS.md  IMPLEMENTATION_SUMMARY.md  LICENSE-agpl-3.0.md  PR_150_ANALYSIS.md  PR_150_TASKS.md  README.md  US2_COMMIT_MESSAGE.md  US2_COMPLETION_SUMMARY.md  _typos.toml  readthedocs.yml  status  time_test  verify_grid_overlay.py  verify_level_dimensions.py  verify_level_dimensions.sh
.devcontainer/: devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: message_event_violation.md
.github/agents/: copilot-instructions.md  speckit.implement.agent.md  speckit.tasks.agent.md
.github/issues/: ecs-lint-violation-detect_ball_loss.md  ecs-lint-violation-detect_powerup_brick_collisions.md  ecs-lint-violation-respawn_executor.md  ecs-lint-violation-toggle_cheat_mode_input.md  ecs-lint-violations.md
.github/lint/: README.md  message_event_lint.py
.github/scripts/: tests_first_check.sh
.github/workflows/: ci.yaml  codespaces-prebuild.yml  deploy-wasm.yml  docs-main.yml  docs-pr.yml  prune-caches.yml  release.yaml  test-wasm.yml
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  plan-template.md  spec-template.md  tasks-template.md
assets/audio/: README.md  brick_41_extra_life.ogg.placeholder  manifest.ron
assets/levels/: GRAVITY_BRICKS_TESTING.md  README.md  level_001.ron  level_002.ron  level_003.ron  level_004.ron  level_005.ron  level_006.ron  level_007.ron  level_008.ron  level_009.ron  level_010.ron  level_011.ron  level_012.ron  level_013.ron  level_014.ron  level_015.ron  level_016.ron  level_017.ron  level_018.ron  level_019.ron  level_020.ron  level_021.ron  level_022.ron  level_023.ron  level_024.ron  level_025.ron  level_026.ron  level_027.ron  level_028.ron  level_029.ron  level_030.ron  level_031.ron  level_032.ron  level_033.ron  level_034.ron  level_035.ron  level_036.ron  level_037.ron  level_038.ron  (+46 more)
docs/: Makefile  api-reference.md  architecture.md  asset-format.md  bricks.md  cheat-mode.md  conf.py  contributing.md  contributors.md  developer-guide.md  faq.md  index.md  quickstart.md  requirements.txt  systems.md  troubleshooting.md  ui-systems.md
img/: macuilxochitl.md
scripts/: README.md  assign_and_add_ground_profiles.py  migrate-assets.sh  stage-rustdoc.sh
src/: level_loader.rs  lib.rs  main.rs  pause.rs  physics_config.rs  signals.rs
src/ui/: fonts.rs  (+9 more)
tests/: README.physics_config_edge_cases.md  audio_config.rs  audio_events.rs  backward_compatibility.rs  ball_lives.rs  ball_material_startup.rs  brick_42_91_life_loss.rs  brick_destroy_dedupe.rs  brick_regression.rs  change_detection.rs  cheat_mode.rs  combined_textures.rs  depth_textures.rs  editor_palette.rs  emissive_textures.rs  extra_ball_brick.rs  extra_ball_brick_audio.rs  fallback_chain.rs  fallback_registry.rs  fallible_systems.rs  gravity_bricks.rs  gravity_effect_integration.rs  gravity_indicator_ui.rs  gravity_integration_test.rs  gravity_loader_idempotence.rs  gravity_message_sequence.rs  gravity_playtest_sim.rs  grid_debug.rs  indestructible_visual.rs  integration_transition.rs  level_definition.rs  level_label.rs  level_overrides.rs  level_switcher.rs  merkaba_audio.rs  merkaba_goal.rs  merkaba_paddle.rs  merkaba_physics.rs  merkaba_spawn.rs  message_boundaries.rs  (+33 more)
tools/: generate_test_textures.py  generate_test_textures.rs
wasm/: build.bat  build.sh  index.html
(+385 files in other folders)
