
[package]
name = "brkrs"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Breakout/Arkanoid-style game built in Rust using the Bevy engine, with physics powered by bevy_rapier3d"

[features]
default = ["texture_manifest"]
texture_manifest = []
local_dynamic = ["bevy/dynamic_linking"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.17.3" }
rand = "0.9.2"
bevy_rapier3d = { version = "0.32.0", features = [
    "debug-render-3d",
] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
serde_json = "1.0"
tracing = "0.1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.17.3", features = ["file_watcher"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
getrandom = { version = "^0.2", features = ["js"] }

# These lints may be important signals about code quality, but normal Bevy code
# commonly triggers them and the CI workflow treats them as errors, so we've
# chosen to allow them in this template.
#
# Feel free to delete the following lines.
[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
